# molt_lab

./: .dockerignore  .gitignore  Dockerfile  EVALUATION_PROTOCOL.md  HF_RL_JOBS_NOTES.md  Instrcuctions_project.md  README.md  REAL_WORLD_WORKFLOW_MAPPING.md  RL_TRAINING_COLAB.md  Requirements_before_submitting.md  TRAINING_INSTRUCTIONS.md  __init__.py  client.py  inference.py  inference_common.py  inspo.md  local_inference.py  lora_inference.py  mlx_lora_inference.py  models.py  molforge_blueprint_v2.md  molforge_grpo_colab_training.py  molforge_grpo_official_submission.ipynb  molforge_oracles.py  openenv.yaml  openenv_shim.py  pyproject.toml  qwen3_5_2b_unsloth_grpo_rl.py  qwen_grpo_run.py  scenarios.py
hf_submission/: README.md  molforge_grpo_official_submission.ipynb  molforge_grpo_training_v2.ipynb  rl_training_helpers.py
issue/: SFT_POLICY_V4_NOTES.md  molforge_grpo_colab_training.ipynb  molforge_grpo_env_factory.py  molforge_grpo_official_submission.ipynb  molforge_tool_env.py  qwen3_5_2b_unsloth_grpo_openenv_tools.py  qwen3_5_2b_unsloth_grpo_rl.py  qwen3_5_2b_unsloth_grpo_rl_legacy.py  qwen3_5_2b_unsloth_sft_2.py
scripts/: convert_peft_lora_to_mlx.py  generate_sft_all_actions_dataset.py  generate_sft_compact_actions_dataset.py  generate_sft_compact_actions_v2_dataset.py  generate_sft_compact_policy_v3_dataset.py  generate_sft_compact_policy_v4_dataset.py  generate_sft_schema_strict_dataset.py  generate_sft_traces.py  validate_sft_traces.py
server/: Dockerfile  __init__.py  actions.py  app.py  governance.py  molforge_environment.py  requirements.txt  shared.py  (+1 more)
(+3 files in other folders)
