[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-molforge"
version = "0.1.0"
description = "MolForge: a deterministic medicinal-chemistry OpenEnv environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.3",
    "pydantic>=2.8.0",
    "rdkit>=2023.9.5,<2024.3.1; python_version < '3.13'",
    "rdkit>=2026.3.1; python_version >= '3.13'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
tdc = [
    "pytdc>=1.1.0; python_version < '3.13'",
]

[project.scripts]
server = "molforge.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["molforge", "molforge.server"]
package-dir = { "molforge" = ".", "molforge.server" = "server" }
